Add vendor directory to site mockup

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -250,6 +250,34 @@
 - Frabrizio asked about images → using inline SVGs (no external resources allowed)
 - Frabrizio: "do what you see best lets see what you got bby" — full creative freedom given
 
+## Site Mockup v5 (FINAL — Complete Rebuild)
+- Clean slate rebuild: `build_site_final.js` → `prc_site_mockup_final.html` (115KB, 437 lines)
+- **CSS-only tabs** (radio inputs + :checked selectors, zero JS): Resources | Shop | Learn | Contact
+- No more endless scrolling — tabs switch content panels
+- Apple-meets-pharma aesthetic: white space, restraint, no emoji, no SVG icons, no animations
+- Product cards: thin color border + name + category + one-line summary, modal for details
+- Header: "PEPTIDE RESOURCE CENTER" with "The Peptide Authority" + blue line separator (client approved this exact look)
+- Dark navy hero, compact trust bar, minimal footer
+- 44 products verified, 0 banned terms
+
+### Key Design Lessons Learned
+- Subagent incremental patches make things WORSE — do clean rebuilds instead
+- Frabrizio + Jessie hate: bubbles/badges around text, big bulky cards, emoji icons, AI-cartoon look, excessive gradients
+- They want: clean text, compact cards, premium restraint, real-site feel with tabs
+- Resources before Shop (it's a resource center first)
+- "PEPTIDE RESOURCE CENTER" must be prominent, "The Peptide Authority" subtle below
+- Mobile-first design — Frabrizio tests everything on iPhone via Telegram
+- GitHub Pages caches aggressively — remind to hard refresh
+
+## Site Mockup v4.x (Iterations — superseded by v5)
+- Frabrizio: "fix shop products area to be more like other sites with small squares and multiple products in a row"
+- Jessie: "it is boring"
+- Redesigned product tiles: big colored icon area top half, clean info bottom half, shopping-style
+- Underline tab navigation with category colors, "Showing X of 44" counter
+- 4/row desktop, 3 tablet, 2 mobile — always grid, never single column
+- Kept flowing scroll layout (better UX + SEO for resource site), tabs within shop section only
+- Subagents keep failing to push to git — remote exists but they don't find it. Always manually copy + push after subagent.
+
 ## Site Mockup v3 (Visual Overhaul - superseded by v4)
 - Jessie feedback: "boring", "product list doesn't look like other sites with small squares and multiple products in a row"
 - Rebuilt: compact visual tiles (4/row desktop, 2/mobile), category emoji icons, modal overlay for details
