Link Contact us to email

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -308,6 +308,23 @@
 - Frabrizio reported link not working — likely GH Pages cache; sent ?v=2 bypass
 - **TODO**: Get green vendor screenshots from Frabrizio
 
+## Site Mockup v4-v5 Evolution (evening continued)
+- v4: Full resource center — vendor directory, education, reviews, testing labs, books, 89 SVG icons
+- v4.1-v4.6: Rapid iteration hell — shop redesign, branding fixes, bubble removal. Learned: incremental CSS patches make things WORSE
+- v5 (FINAL): Complete clean-slate rebuild. CSS-only tabs (radio inputs + :checked). Apple-meets-pharma. No emoji/SVG/animations. Frabrizio approved: "This looks much better" and "This is what I am talking about"
+- v5.1: iOS Safari tab fix (JS fallback), hamburger menu for mobile
+
+## Vendor Directory Integration
+- Subagent built vendor directory into Resources tab with search + filter by tier
+- QA found duplicate vendors: "Lab Sourced" (Trusted + Flagged), "Bio Tech Peptides" (Caution + Flagged) — need to resolve
+- All vendor notes rewritten for legal safety: no "scam"/"sketchy"/"avoid" language
+- Added methodology statement, disclaimer, vendor dispute contact CTA
+- build_site_final.js now reads vendor_directory.md dynamically
+
+## Critical Build Lesson
+- **Always `cp prc_site_mockup_final.html site.html` before pushing** — GH Pages serves site.html
+- GitHub Pages caches aggressively; Telegram in-app browser even worse — tell Frabrizio to open in Safari with ?v=N cache bust
+
 ## Frabrizio Feedback Style
 - Sends rapid-fire messages, expects fast iteration
 - Tests everything on iPhone Safari (opened as local file from Telegram)
