Match PRC bright blue - hero, banners, header, footer

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -1,34 +1,55 @@
-# 2026-02-13 — Session Notes
+# 2026-02-13 — Late Night Session (Paris Flight)
 
-## Major Progress
-- **RED vendor cross-reference complete** — Subagent processed 11 Wix screenshots, all 45 red vendors were already captured, 7 vendor notes updated for legal safety. Commit `abfc3d7`.
-- **Vendor count now 382** — subagent added vendors during cross-reference (was 325). Green 53(?), Orange 25, Red 139. Yellow tier added by Frabrizio with 108 vendors.
-- **Yellow tier is live** — Frabrizio added Yellow tier (108 vendors) to the site. Definition: "Vendors we don't have information on, haven't heard anything negative about, or haven't worked with."
-- **Email decided**: contact@peptideresourcecenter.com for resource center site, support@prcpeptides.com for store. Both forward to prcpeptides@gmail.com.
-- **Tier descriptions approved** — Frabrizio confirmed Green/Yellow/Orange/Red tier text matches Wix. Screenshot msg 1764 shows it live.
-- **Broken submodule fix (again)** — prc-tools kept re-adding as submodule. Added to .gitignore this time. Commit `6f7682d`.
-- **Tab switching bug** — Shop/Learn/Contact tabs showed blank content on iOS Safari. Added `!important` to JS display override. Commit `f02be20`.
+## Affiliate Links & Codes
+- Extracted all affiliate data from Frabrizio's price comparison .docx
+- **26 total affiliate vendors** confirmed — 4 with referral-tracked URLs, 25 with discount codes
+- 6 vendors were missing from vendor directory (AIO, Authentic Aminos, BC9, Elev8, EQNO, TCore) — added to Green tier
+- Ascension Peptides URL added (ascensionpeptides.com)
+- Tydes had wrong code "REFYESENIACA" → fixed to "Kikiriki"
+- All 26 verified against docx source of truth
 
-## Vendor Tier Counts (current)
-- Green: ~110 (per screenshot)
-- Yellow: 108 (NEW — added by Frabrizio)
-- Orange: 25
-- Red: 139
-- Total: 382
+## QA Deep Dive
+- Fixed **211 broken `</span>` tags** — "Green/span>" missing `<` across all tiers
+- Fixed footer labels missing onclick handlers (iOS Safari tab switching)
+- Updated vendor filter pill counts (117/110/26/140 = 393 total)
+- Disclaimer now mentions Yellow tier
+- Affiliate vendor names styled blue (clickable)
+- Comparison tool vendor links styled blue
 
-## Key Decisions
-- **contact@peptideresourcecenter.com** — chosen for resource center (covers affiliates, ratings, product questions)
-- **support@prcpeptides.com** — for the store site
-- Both forward to prcpeptides@gmail.com (one inbox)
-- Vendor tier descriptions match Wix wording — approved by Frabrizio
+## Reconstitution Calculator
+- Built and added to Resources tab
+- Fields: peptide mg, bac water mL, desired dose mcg, doses per day
+- Calculates: concentration, volume to draw (mL + syringe units), doses per vial, vial duration
+- Added dark navy header banner (matches comparison tool style)
+- Added step-by-step guide explaining each field
+- Added plain-English summary of results
+- Fixed iOS Safari input bug: switched from type="number" to type="text" inputmode="decimal" with triple event binding (oninput + onkeyup + onchange)
 
-## Open Issues
-- Tab switching on iOS Safari may still not work — pushed fix but untested by Frabrizio yet
-- Hero stats say "382 Vendors Reviewed" — correct now
-- Frabrizio wants a subtle "Shop PRC Products" element (mentioned it again, already exists in Vendors tab as callout banner)
-- Grey tier (China direct sellers) still not implemented
+## Visual Upgrade
+- Jessie reviewed site and said "this is trash" / "looks like 200 other websites" / "wants to stand out"
+- She wants: variety of fonts, cohesive themes, dynamic pages (moving words), visual engagement
+- Added: serif headings (Georgia), hero fade-up animations, scroll animations (fade-in on scroll), hover effects (tile lift, button scale), teal+navy gradient with shimmer
+- **Key lesson: Jessie wants PRC to have its own distinct identity, not generic template look**
+- Need screenshots from Jessie of sites she thinks stand out — fastest path to her vision
+- Real visual polish should happen on WooCommerce (prcpeptides.com), not the static mockup
+
+## Git Commits (chronological)
+- Fix missing category pills (d52e533 — reset point)
+- Add all 26 affiliate links and codes
+- Add Ascension Peptides URL
+- Fix Tydes code
+- Make affiliate links blue
+- Update vendor count 382→393
+- QA: fix 211 broken spans, update pill counts, footer onclick
+- Add reconstitution calculator
+- Calculator dark header banner
+- Fix calculator iOS inputs
+- Add calculator guide + summary
+- Polish calculator results layout
+- Visual upgrade: fonts, animations, colors, hover effects
 
 ## Frabrizio Context
-- Currently in NYC/Paris transit (JFK → CDG)
-- Actively testing site on iPhone via Telegram browser + Safari
-- Very engaged tonight — rapid iteration cycle
+- On flight to Paris (JFK→CDG), working on phone
+- "Do what you think is best, we are building an empire"
+- Wants to make sure affiliate money keeps flowing
+- Jessie is the brand eye — her feedback drives design decisions
