Product pages v3 - real descriptions from v3 data

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -48,8 +48,25 @@
 - Polish calculator results layout
 - Visual upgrade: fonts, animations, colors, hover effects
 
+## Dark Premium Hero Redesign (Late Night ~11pm PST)
+- Jessie said current site looks "boring hospital vibes" — wants first part eye-catching
+- Frabrizio sent PRC branding images: dark navy background, neon-glow PRC vial logo, molecular pattern, 3 value props
+- **PRC Logo**: vial inside oval ring, "PRC" on banner across middle — created as inline SVG with glow animation
+- **Value props from branding**: Direct Sourcing/Stop Overpaying, Quality Assurance/Purity Guaranteed, Risk-Free/Money-Back Guarantee
+- **Headline changed**: "PEPTIDE RESOURCE CENTER" → "Premium Research Peptides Without the Premium Price"
+- Hero now dark (#080E1A) with radial blue glow, molecular dot SVG pattern, floating/pulsing logo
+- Added "For Research Use Only." disclaimer at bottom of hero
+- 3 CTAs: Shop Peptides (primary), Vendor Directory, Explore Resources
+- Staggered fade-in animations on value props, stat badge pop-in, line grow animation
+- Product cards hover lift increased (4px), vendor rows slide on hover
+- Also had remote conflict on push (someone/something pushed "Redesign resource sections" commit 5b75122) — had to reset to origin and re-push
+- Commits: 324918b (dark hero v1), 0c39d3e (hero v2 with accurate logo + value props)
+- **Cache buster**: now at ?v=42
+
 ## Frabrizio Context
 - On flight to Paris (JFK→CDG), working on phone
 - "Do what you think is best, we are building an empire"
+- "Do what you do playa I gave you some ideas and content to work with"
 - Wants to make sure affiliate money keeps flowing
 - Jessie is the brand eye — her feedback drives design decisions
+- Frabrizio sent 4 reference images: real vial photos, PRC branding graphic (dark), clean PRC logo on white
